# ContextAnalyzerTerminal

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  context-analyzer-project-brief.md  pyproject.toml
.claude/agents/: anomaly-expert.md  code-reviewer.md  config-expert.md  fastapi-expert.md  hooks-expert.md  llm-classifier.md  planner.md  researcher.md  sqlite-expert.md  tester.md  tui-expert.md  web-dashboard.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: architecture.md  setup-helper.md  troubleshooter.md
.github/workflows/: ci.yml
docs/: phase1-architecture.md  phase2-architecture.md  v0.2.0-plan.md
hooks/: _hook_config.py  post_compact.py  post_tool_use.py  pre_compact.py  session_start.py  statusline.py  stop.py  subagent_stop.py  user_prompt_submit.py
src/context_analyzer_tool/: __init__.py  cli.py  config.py  rtk_integration.py
src/context_analyzer_tool/collector/: delta_engine.py  models.py  routes.py  server.py
src/context_analyzer_tool/dashboard/: tui.py
src/context_analyzer_tool/db/: anomalies.py  baselines.py  compaction.py  events.py  maintenance.py  messages.py  schema.py
src/context_analyzer_tool/engine/: anomaly.py  (+4 more)
src/context_pulse/: __init__.py  cli.py  config.py  rtk_integration.py
tests/: conftest.py  test_anomaly.py  test_baseline.py  test_burn_rate.py  test_classifier.py  test_config.py  test_context_warnings.py  test_dashboard.py  test_db.py  test_delta_engine.py  test_notify.py  test_routes.py  test_rtk_integration.py
(+28 files in other folders)
