[project]
name = "context-analyzer-tool"
version = "0.3.0"
description = "Per-tool-call context window analyzer for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
classifier = ["anthropic>=0.43.0"]

[project.scripts]
context-analyzer-tool = "context_analyzer_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_analyzer_tool"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "B008",  # function-call-in-default-argument — standard for FastAPI Depends() and Typer Option()
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]
